# murkelhausen_app

./: .gitignore  Dockerfile  README.md  TODO.md  create_release.sh  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/: tag.yml.foo
.github/workflows/: main.yml  tag.yml  tagging.yml  testing.yml
chat/: README.md  TODO.md  filters.py  forms.py  models.py  tables.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/openai/: main.py
murkelhausen_app/: asgi.py  settings.py  urls.py  wsgi.py
murkelhausen_info/: README.md  TODO.md  apps.py  forms.py  models.py  routers.py  tables.py  urls.py  views.py
murkelhausen_info/fussballde/: __init__.py  main.py
murkelhausen_info/gymbroich/: __init__.py  main.py
murkelhausen_info/mheg/: __init__.py  main.py
murkelhausen_info/nina/: README.md  main.py
murkelhausen_info/ruhrbahn/: DepartureModel.py  StationModel.py  __init__.py  main.py
murkelhausen_info/templatetags/: datetags.py  mathtags.py  weathertags.py
murkelhausen_info/weather/: OWMOneCall.py  __init__.py  nmi.py  owm.py  owm_one_call_functions.py  rainradar.py  wetter-mh.py
pages/: views.py
scripts/: tabula.py
statements/: TODO.md  admin.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py  views_functions.py
statements/migrations/: 0001_initial.py  0002_commerzbankcategory_and_more.py  0003_rename_commerzbankcategory_statementcategory_and_more.py  0004_rename_commerzbankauszug_commerzbankstatements.py  0005_alter_statementkeyword_is_regex.py  0006_rename_keyword_statementkeyword_name.py  0007_commerzbankstatement_delete_commerzbankstatements.py
static/css/: table_styles.css
static/js/: navbar-active.js
trainer/: TODO.md  admin.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
trainer/migrations/: 0001_initial.py  0002_vokabel_created_vokabel_updated.py  0003_alter_vokabel_unique_together_vokabelgroup_and_more.py  0004_vokabelgroup_created_vokabelgroup_updated.py  0005_alter_vokabelgroup_name_and_more.py  (+2 more)
(+71 files in other folders)
