[tool.poetry]
name = "murkelhausen-app"
version = "1.3.0"
description = ""
authors = ["Arkadius Schuchhardt <arkadius@schuchhardt.com>"]
readme = "README.md"
packages = [{include = "murkelhausen_app"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
django-tables2 = "^2.5.3"
django-filter = "^23.2"
plotly = "^5.14.1"
pandas = "^2.0.1"
pdfplumber = "^0.9.0"
tabula-py = "^2.7.0"
pydantic = "^2.1.1"
django-bootstrap5 = "^23.3"
fontawesomefree = "^6.4.2"
requests = "^2.31.0"
psycopg = "^3.1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
