[tool.poetry]
name = "murkelhausen-app"
version = "1.14.2"
description = ""
authors = ["Arkadius Schuchhardt <arkadius@schuchhardt.com>"]
readme = "README.md"
packages = [{include = "murkelhausen_app"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
django-tables2 = "^2.5.3"
django-filter = "^23.2"
plotly = "^5.14.1"
pandas = "^2.0.1"
pdfplumber = "^0.9.0"
tabula-py = "^2.7.0"
pydantic = "^2.1.1"
django-bootstrap5 = "^23.3"
fontawesomefree = "^6.4.2"
requests = "^2.31.0"
psycopg = "^3.1.10"
openai = "^0.28.1"
django-markdownify = "^0.9.3"
babel = "^2.13.1"
cachetools = "^5.3.2"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F"]  # "DJ",